# mathworks-physical-sensor-model

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: .gitignore  README.md  hash_to_params.json
src/: Distortions.ipynb  README.md  similarity.mlx
src/data/: clear_point_maps_data.py  data_util.py  generate_point_maps.py
src/felix'sCode/: Distortions.ipynb  cyclegan.py  cyclegan_utils.py  generate_distortion.py  get_data.py  pix2pix.py  pix2pix_utils.py  utils.py
src/matlab_utils/: radial.m  similarity.m  tangential.m
src/point_map_nn/: .gitignore  README.md  gradient_descent.py  model.py  multi_train_script.sh  pipeline.m  pipeline.py  point_map_nn.h5  visualize.py
src/point_map_nn/model_weights/: mae_point_map_high_reg.h5  mae_point_map_low_reg.h5  mae_point_map_med_reg.h5  mae_point_map_no_reg.h5  mse_point_map_high_reg.h5  mse_point_map_low_reg.h5  mse_point_map_med_reg.h5  mse_point_map_no_reg.h5
src/util/: __init__.py  distortions.py
src/utils/: __init__.py  _paths.py  arg_checks.py  constants.py  data_util.py  distortions.py  images.py  model.py  paths.py  tensors.py  typing.py
tests/: README.md
